--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,30 @@
 .caja1{
 	height: 100px;
 	background-color: #FFFF00;
-	border:2px solid black;
+	border:2px solid #fff;
 }
 .caja2{
 	height: 100px;
 	background-color: #AFFF00;
-	border:2px solid black;
+	border:2px solid #fff;
 }
 .caja3{
 	height: 100px;
 	background-color: #1EE2A6;
-	border:2px solid black;
+	border:2px solid #fff;
 }
 .caja4{
 	height: 100px;
 	background-color: #01B6AD;
-	border:2px solid black;
+	border:2px solid #fff;
 }
 .caja5{
 	height: 100px;
 	background-color: #9C42D1;
-	border:2px solid black;
+	border:2px solid #fff;
 }
 .caja6{
 	height: 100px;
 	background-color: #D126A9;
-	border:2px solid black;
+	border:2px solid #fff;
 }
